[tool.poetry]
name = "tree-labeller"
version = "0.1.0"
description = "Labels tree-based data"
authors = ["dzieciou <mgawinecki@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
anytree = "^2.8.0"
tqdm = "^4.62.3"
fire = "^0.4.0"
termgraph = "^0.5.3"
fastcache = "^1.1.0"
jsonlines = "^3.0.0"
tabulate = "^0.8.9"
fsspec = {extras = ["http"], version = "^2021.11.1"}
spacy = "^3.2.1"
pl-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.2.0/pl_core_news_sm-3.2.0.tar.gz"}
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
coverage = "^6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
label = "labeller.label:cli"
create_task = "labeller.create_task:cli"
fetch_fresco = "labeller.fetch_fresco:cli"
