[tool.poetry]
name = "tree-labeller"
version = "0.1.0"
description = "Labels tree-based data"
authors = ["Maciej Gawinecki <mgawinecki@gmail.com>", "Paweł Kubiak <pkubiak>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
anytree = "^2.8.0"
tqdm = "^4.62.3"
fire = "^0.4.0"
termgraph = "^0.5.3"
jsonlines = "^3.0.0"
tabulate = "^0.8.9"
fsspec = {extras = ["http"], version = "^2021.11.1"}
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12"
coverage = "^6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
label = "tree_labeller.label:cli"
create_task = "tree_labeller.create_task:cli"
fetch_fresco = "tree_labeller.fetch_fresco:cli"
